--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/DeleteDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/DeleteDialog.razor
@@ -4,7 +4,8 @@
 <MDialogExtension MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
-                  MaxWidth="420">
+                  MaxWidth="420"
+                  Eager="true">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @Title
