--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PasswordDialog.razor
@@ -1,11 +1,12 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits FocusDialogComponentBase
 
-<MDialogExtension @ref="mDialogExtension"
+<MDialogExtension @ref="mDialog"
                   MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
-                  MaxWidth="480">
+                  MaxWidth="480"
+                  Eager="true">
     <MForm @ref="@form"
            Model="@model"
            OnValidSubmit="HandleOnOK"
