--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
@@ -2,7 +2,7 @@
 @inherits DialogComponentBase
 
 <MDialogExtension MyValue="Visible"
-                  MyValueChanged="VisibleChanged"
+                  MyValueChanged="InternalVisibleChanged"
                   Eager="true"
                   Fullscreen="true"
                   Transition="">
