--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/TransferDialog.razor
@@ -5,7 +5,8 @@
          ValueChanged="InternalVisibleChanged"
          ContentClass="rounded-lg"
          Persistent="true"
-         MaxWidth="420">
+         MaxWidth="420"
+         Eager="true">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @Title
