--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
         <ChildContent>
             <FirstLaunchDialog />
 
-            <MainNavigationDrawer @bind-Value="NavigationIndex"
+            <MainNavigationDrawer @bind-Value="NavigationButtonIndex"
                                   Items="NavigationButtons">
             </MainNavigationDrawer>
 
@@ -15,7 +15,7 @@
                 </PPageContainerExtension>
             </MMain>
 
-            <MainLayoutBottomNavigation @bind-Value="NavigationIndex"
+            <MainLayoutBottomNavigation @bind-Value="NavigationButtonIndex"
                                         Items="NavigationButtons">
             </MainLayoutBottomNavigation>
         </ChildContent>
