--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNavigation.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNavigation.razor
@@ -16,7 +16,7 @@
         <MButton Ripple="false"
                  OnClick="item.OnClick">
             <MIcon>
-                @GetIcon(item)
+                @item.Icon
             </MIcon>
         </MButton>
     }
