--- a/src/SwashbucklerDiary.Rcl/Pages/History/ExportByTimeDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/History/ExportByTimeDialog.razor
@@ -2,7 +2,7 @@
 @inherits DialogComponentBase
 
 <MultiListDialog Visible="Visible"
-                 VisibleChanged="VisibleChanged"
+                 VisibleChanged="InternalVisibleChanged"
                  Title="@(I18n.T("History.ExportTime.Name"))"
                  DynamicListItems="exportTimeItems">
 </MultiListDialog>
