--- a/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
@@ -78,7 +78,7 @@
 @if (tab == 0)
 {
     <RightBottomFloatButton Icon="mdi-pencil"
-                            OnClick="@(()=>To("write",false))">
+                            OnClick="@(()=>To("write"))">
     </RightBottomFloatButton>
 }
 
