--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ExportDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ExportDialog.razor
@@ -2,7 +2,7 @@
 @inherits DialogComponentBase
 
 <MultiListDialog Visible="Visible"
-                 VisibleChanged="VisibleChanged"
+                 VisibleChanged="InternalVisibleChanged"
                  Title="@(I18n.T("Export.Export.SelectType"))"
                  DynamicListItems="items">
 </MultiListDialog>
