--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
@@ -1,11 +1,12 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits FocusDialogComponentBase
 
-<MDialogExtension @ref="mDialogExtension"
+<MDialogExtension @ref="mDialog"
                   MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
-                  MaxWidth="420">
+                  MaxWidth="420"
+                  Eager="true">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @Title
