--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/RadioDialog.razor
@@ -21,6 +21,7 @@
             <MRadioGroup Value="Value"
                          TValue="TItemValue"
                          ValueChanged="InternalValueChanged"
+                         OnChange="OnChange"
                          Class="mt-0 pb-1"
                          OnClick="HandleOnCancel"
                          HideDetails="@("auto")"
