--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -1,12 +1,13 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
-@inherits DialogComponentBase
+@inherits ShowContentDialogComponentBase
 
-<MDialogExtension @ref="myDialog"
+<MDialogExtension @ref="mDialog"
                   MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
-                  Scrollable>
+                  Scrollable="true"
+                  Eager="true">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Location.Select"))
