--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
@@ -1,11 +1,13 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
-@inherits DialogComponentBase
+@inherits ShowContentDialogComponentBase
 
-<MDialogExtension MyValue="Visible"
+<MDialogExtension @ref="mDialog"
+                  MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
-                  Scrollable="true">
+                  Scrollable="true"
+                  Eager="true">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Tag.Select"))
