--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiDatePicker.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiDatePicker.razor
@@ -4,7 +4,7 @@
 <MultiDisplay OnUpdate="UpdateDisplay">
     <MobileContent>
         <PMobileDatePickerExtension MyVisible="Visible"
-                                    MyVisibleChanged="VisibleChanged"
+                                    MyVisibleChanged="InternalVisibleChanged"
                                     Value="Value"
                                     ValueChanged="ValueChanged"
                                     Min="Min??default"
@@ -13,7 +13,7 @@
     </MobileContent>
     <DesktopContent>
         <DatePickerDialog Visible="Visible"
-                          VisibleChanged="VisibleChanged"
+                          VisibleChanged="InternalVisibleChanged"
                           Value="Value"
                           ValueChanged="ValueChanged"
                           Min="Min"
