--- a/src/SwashbucklerDiary.Rcl/Layout/MainNavigationDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainNavigationDrawer.razor
@@ -18,7 +18,7 @@
                            OnClick="item.OnClick">
                     <MListItemIcon>
                         <MIcon Size="24">
-                            @GetIcon(item)
+                            @item.Icon
                         </MIcon>
                     </MListItemIcon>
                     <MListItemTitle Class="@GetTitleClass(item)">
@@ -39,7 +39,6 @@
 
     private string? GetTitleClass(NavigationButton button)
     {
-        bool activated = Items.IndexOf(button) == Value;
-        return activated ? "text-h6 font-weight-bold" : "";
+        return button.Index == Value ? "text-h6 font-weight-bold" : "";
     }
 }
