--- a/src/SwashbucklerDiary.WebAssembly/Page/Backups/WebDAVBackups.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Page/Backups/WebDAVBackups.razor
@@ -1,4 +1,4 @@
 ﻿@namespace SwashbucklerDiary.WebAssembly.Pages
 @inherits ImportantComponentBase
 
-@(I18n.T("ToDo.Title"))
+@(I18n.T("Share.NotSupported"))
