--- a/src/SwashbucklerDiary.WebAssembly/_Imports.razor
+++ b/src/SwashbucklerDiary.WebAssembly/_Imports.razor
@@ -17,3 +17,4 @@
 @using SwashbucklerDiary.Rcl.Models
 @using SwashbucklerDiary.Rcl.Components
 @using SwashbucklerDiary.Rcl.Pages
+@using SwashbucklerDiary.WebAssembly.Layout
