--- a/src/SwashbucklerDiary.Maui/Routes.razor
+++ b/src/SwashbucklerDiary.Maui/Routes.razor
@@ -1,4 +1,4 @@
-﻿<Router AppAssembly="@typeof(MainLayout).Assembly" AdditionalAssemblies="[typeof(Routes).Assembly]">
+﻿<Router AppAssembly="@typeof(MainLayoutBase).Assembly" AdditionalAssemblies="[typeof(Routes).Assembly]">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
