--- a/src/SwashbucklerDiary.Maui/_Imports.razor
+++ b/src/SwashbucklerDiary.Maui/_Imports.razor
@@ -15,3 +15,4 @@
 @using SwashbucklerDiary.Rcl.Models
 @using SwashbucklerDiary.Rcl.Components
 @using SwashbucklerDiary.Rcl.Pages
+@using SwashbucklerDiary.Maui.Layout
