--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/EmptyResult/EmptyResult.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/EmptyResult/EmptyResult.razor
@@ -15,6 +15,9 @@
     [Inject]
     protected II18nService I18n { get; set; } = default!;
 
+    [CascadingParameter(Name = "Culture")]
+    public string? Culture { get; set; }
+
     [Parameter]
     public bool Show { get; set; }
 
