🆕 feat: Add VersionTracking on WebAssembly

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -22,7 +22,7 @@
                         @(I18n.T("AppName"))
                     </MListItemTitle>
                     <MListItemSubtitle Class="mb-2">
-                        version @appVersion
+                        version @AppVersion
                     </MListItemSubtitle>
                     <MListItemSubtitle Class="mb-2">
                         @(I18n.T("About.Introduction"))
