🐛 fix: Initialization may use incorrect root path

--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -6,9 +6,7 @@
             <ChildContent>
                 <FirstLaunchDialog />
 
-                <MainNavigationDrawer @bind-Value="NavigationButtonIndex"
-                                      Items="NavigationButtons">
-                </MainNavigationDrawer>
+                <MainLayoutNavDrawer Items="NavigationButtons"></MainLayoutNavDrawer>
 
                 <MMain>
                     <PPageContainerExtension>
@@ -16,9 +14,7 @@
                     </PPageContainerExtension>
                 </MMain>
 
-                <MainLayoutBottomNavigation @bind-Value="NavigationButtonIndex"
-                                            Items="NavigationButtons">
-                </MainLayoutBottomNavigation>
+                <MainLayoutBottomNav Items="NavigationButtons"></MainLayoutBottomNav>
             </ChildContent>
 
             <ErrorContent>
