♻ refactor: Move sort to menu

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -48,8 +48,7 @@
 </ExportDialog>
 
 <RadioDialog @bind-Value="sortItem"
-             Visible="ShowSort"
-             VisibleChanged="ShowSortChanged"
+             @bind-Visible="showSort"
              Title="@(I18n.T("Share.Sort"))"
              Items="SortItems">
 </RadioDialog>
