--- a/src/SwashbucklerDiary.Rcl/Pages/TagPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/TagPage.razor
@@ -1,31 +1,12 @@
 ﻿@page "/tag/{id:guid}"
 @inherits DiariesPageComponentBase
 
-<MyAppBar>
-    <MButton Icon="true"
-             OnClick="NavigateToBack">
-        <MIcon>
-            mdi-arrow-left
-        </MIcon>
-    </MButton>
-
-    <MToolbarTitle Class="font-weight-bold">
-        @(tagName)
-    </MToolbarTitle>
-
-    <MSpacer></MSpacer>
-
-    <MButton Icon="true"
-             OnClick="()=>showDiarySort=true">
-        <MIcon>
-            mdi-sort-variant
-        </MIcon>
-    </MButton>
+<MyAppBar Title="@tagName"
+          OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
     <DiaryCardList @bind-Tags="Tags"
-                   @bind-ShowSort="showDiarySort"
                    Value="Diaries" />
 </ScrollContainer>
 
