--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -15,7 +15,7 @@
                 <MListItemAvatar Class="mr-8 hidden-xs-only"
                                  Rounded="@("lg")"
                                  Size="75">
-                    <MImage Src="_content/SwashbucklerDiary.Rcl/logo/logo.svg"></MImage>
+                    <MImage Src="@($"_content/{Essentials.StaticWebAssets.RclAssemblyName}/logo/logo.svg")"></MImage>
                 </MListItemAvatar>
                 <MListItemContent>
                     <MListItemTitle Class="text-h5 my-2 font-weight-bold">
