--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -24,15 +24,7 @@
                 <MListItemAction>
                     <MAvatar Rounded="@("lg")"
                              Size="32">
-                        <MImage Src="@avatar">
-                            <PlaceholderContent>
-                                <MRow Class="fill-height ma-0"
-                                      Align="@AlignTypes.Center"
-                                      Justify="@JustifyTypes.Center">
-                                    <MProgressCircular Indeterminate></MProgressCircular>
-                                 </MRow>
-                             </PlaceholderContent>
-                         </MImage>
+                        <MImage Src="@avatar"></MImage>
                      </MAvatar>
                      <MIcon>mdi-chevron-right</MIcon>
                  </MListItemAction>
