--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
@@ -7,7 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="mb-5 user-select"
+    <MCard Class="mb-5 user-select pt-2"
            Elevation="0"
            Rounded="@("lg")">
         <MCardTitle Class="text-h5 font-weight-bold py-sm-10" Style="justify-content:center;">
