♻️ refactor(Setting): Use appropriate names and types

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
@@ -23,7 +23,7 @@
                 <MListItemAction>
                     <MSwitch @bind-Value="date"
                              TValue="bool"
-                             OnChange="SettingChange(Setting.Date)"
+                             OnChange="SettingChange(Setting.IndexDate)"
                              Dense="true"
                              Inset="true"
                              Color="white"
