💄 style: update a little style

--- a/src/SwashbucklerDiary.WebAssembly/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.WebAssembly/wwwroot/css/app.css
@@ -110,5 +110,6 @@ code {
 
         .m-snackbar--pwa .m-snack__wrapper {
             border-radius: 12px !important;
+            min-width: 344px !important;
         }
 }
